--- a/PharmacyDeliverySystem/Views/Home/Index.cshtml
+++ b/PharmacyDeliverySystem/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
     Layout = "_Layout";
 
     // الليست اللي جايه من الكنترولر
-    List<PharmacyDeliverySystem.Models.Product> offerList =
-        ViewBag.OffersProducts as List<PharmacyDeliverySystem.Models.Product>;
+    List<PharmacyDeliverySystem.Models.Product>? offerList =
+           ViewBag.OffersProducts as List<PharmacyDeliverySystem.Models.Product>;
 }
 
 @section Head {
